Addressed the bug that resulted in incorrect rendering of card images on iOS mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
   background-color: #6589f9;
 }
 
-.rotate-y-45 {
+.rotate-y-90 {
   transform: rotateY(90deg);
 }
 
 .rotate-y-0 {
-  transform: rotateY(20deg);
+  transform: rotateY(0deg);
 }
